# llm-book

./: README.md  compose.yaml  demo.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
src/chapter1/: 1-introduction.ipynb
