[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["marumarukun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
transformers = {extras = ["ja", "sentencepiece", "torch"], version = "^4.40.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
